# candle_pipelines

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
all_tasks/completed/: 01-async-tools.md  03-batched-inference.md  07-max-context-length-api.md
candle/: README.md
candle-pipelines/: Cargo.toml
candle-pipelines-macros/: Cargo.toml  README.md
candle-pipelines-macros/src/: lib.rs
candle-pipelines-models/: Cargo.toml  README.md
candle-pipelines-models/src/: lib.rs  quantized_llama.rs  quantized_olmo3.rs
candle-pipelines/benches/: xml_parser.rs
candle-pipelines/examples/: fill_mask.rs  reader.rs  sentiment_analysis.rs  text_generation.rs  text_generation_streaming.rs  text_generation_tools.rs  xml_parser.rs  xml_parser_streaming.rs  zero_shot.rs
candle-pipelines/src/: lib.rs  loaders.rs
candle-pipelines/src/models/: capabilities.rs  gemma3.rs  mod.rs  modernbert.rs  qwen3.rs  readerlm_v2.rs
candle-pipelines/src/models/llama3_2/: mod.rs  model.rs  tool_parser.rs
candle-pipelines/src/models/olmo3/: mod.rs  model.rs  tool_parser.rs
candle-pipelines/src/models/qwen3/: mod.rs  model.rs  tool_parser.rs
candle-pipelines/src/pipelines/: cache.rs  mod.rs  stats.rs
candle-pipelines/src/pipelines/fill_mask/: builder.rs  mod.rs  pipeline.rs
candle-pipelines/src/pipelines/reader/: builder.rs  mod.rs  model.rs  pipeline.rs
candle-pipelines/src/pipelines/sentiment/: builder.rs  mod.rs  pipeline.rs
candle-pipelines/src/pipelines/text_generation/: base_pipeline.rs  builder.rs  message.rs  mod.rs  model.rs  params.rs  parser.rs  pipeline.rs  stats.rs  tools.rs  xml_parser.rs
candle-pipelines/src/pipelines/text_generation/streaming/: completion_stream.rs  mod.rs  tokens.rs
candle-pipelines/src/pipelines/text_generation/tools/: iterator.rs  mod.rs  tool.rs
candle-pipelines/src/pipelines/utils/: builder.rs  mod.rs
candle-pipelines/src/pipelines/zero_shot/: builder.rs  mod.rs  pipeline.rs
candle-pipelines/tests/: fill_mask.rs  model_switching.rs  sentiment.rs  tools.rs  zero_shot.rs
candle_pipelines/: Cargo.toml  README.md
candle_pipelines/examples/: sentiment_analysis.rs  text_generation.rs  text_generation_tools.rs  xml_parser.rs  xml_parser_streaming.rs
candle_pipelines/src/: error.rs
candle_pipelines/src/models/: gemma3.rs  qwen3.rs
candle_pipelines/src/pipelines/: cache.rs  mod.rs
candle_pipelines/src/pipelines/fill_mask/: builder.rs  model.rs
candle_pipelines/src/pipelines/sentiment/: builder.rs  mod.rs
candle_pipelines/src/pipelines/text_generation/: base_pipeline.rs  builder.rs  mod.rs  parser.rs  pipeline.rs  tools.rs  xml_pipeline.rs
candle_pipelines/src/pipelines/utils/: mod.rs
candle_pipelines/src/pipelines/zero_shot/: pipeline.rs
candle_pipelines/tests/: text_generation.rs  tools.rs
candle_pipelines_macros/: Cargo.toml
examples/: fill_mask.rs  sentiment_analysis.rs  text_generation.rs  text_generation_streaming.rs  text_generation_tools.rs  xml_parser_streaming.rs  zero_shot.rs
possible_tasks/: 02-async-tools.md  03-conversation.md  04-json-mode.md  05-error-types.md  06-generation-stats.md
src/: error.rs  lib.rs  loaders.rs  message.rs
src/core/: cache.rs
src/models/: gemma3.rs  llama.rs  mod.rs  modernbert.rs  qwen3.rs
src/models/components/: attention.rs  layers.rs  mod.rs
src/models/generation/: logits.rs  mod.rs  params.rs  sampling.rs
src/models/implementations/: gemma3.rs  gemma3_candle.rs  mod.rs  modernbert.rs  qwen3.rs
src/pipelines/: base.rs  cache.rs  mod.rs
src/pipelines/embedding_pipeline/: builder.rs  mod.rs  model.rs  pipeline.rs
src/pipelines/fill_mask/: builder.rs  mod.rs  model.rs  pipeline.rs
src/pipelines/sentiment/: builder.rs  (+3 more)
tasks/completed/: 01-error-types.md  02-error-message-improvements.md  05-completion-accepts-string.md  06-clear-cache-api.md  08-graceful-cuda-fallback.md  09-builder-defaults-from-model.md  11-typed-tool-params.md
tasks/future/: 01-json-mode.md  02-model-info-api.md
tasks/not_planned/: 01-llama-support.md  02-conversation.md
tasks/todo/: 01-api-documentation-audit.md
tests/: cache.rs  embedding.rs  fill_mask.rs  sentiment.rs  text_generation.rs  tools.rs  zero_shot.rs
tool_macro/: Cargo.toml
tool_macro/src/: lib.rs
transformers/: Cargo.toml
transformers/examples/: error_handling.rs  fill_mask.rs  sentiment_analysis.rs  text_generation.rs  text_generation_streaming.rs  text_generation_tools.rs  xml_parser.rs  xml_parser_streaming.rs  zero_shot.rs
transformers/src/: error.rs  lib.rs  loaders.rs
transformers/src/models/: gemma3.rs  mod.rs  modernbert.rs  qwen3.rs
transformers/src/pipelines/fill_mask/: builder.rs  mod.rs  model.rs  pipeline.rs
transformers/src/pipelines/sentiment/: builder.rs  mod.rs  model.rs  pipeline.rs
transformers/src/pipelines/text_generation/: base_pipeline.rs  builder.rs  mod.rs  model.rs  parser.rs  pipeline.rs  stats.rs  tools.rs  xml_pipeline.rs
transformers/src/pipelines/text_generation/streaming/: completion_stream.rs  event_stream.rs
transformers/src/pipelines/utils/: builder.rs  mod.rs
transformers/src/pipelines/zero_shot/: builder.rs  mod.rs  model.rs  pipeline.rs
transformers/tests/: cache.rs  fill_mask.rs  sentiment.rs  text_generation.rs  tools.rs  zero_shot.rs
(+36 files in other folders)
