[package]
name = "candle-pipelines"
description = "Simple, intuitive pipelines for local LLM inference in Rust, powered by Candle. Inspired by Python's Transformers library."
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0" 
repository = "https://github.com/ljt019/candle-pipelines/"
readme = "../README.md"

[dependencies]
minijinja = { version = "2.9.0", features = ["json", "loader"] }
serde = { version = "1.0.219", features = ["derive"] }
tokenizers = "0.21.1"
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
tracing = "0.1.41"
rand = "0.9.1"
candle-pipelines-macros = { path = "../candle-pipelines-macros", version = "0.0.1" }
once_cell = "1.20"
regex = "1"
futures = "0.3.31"
async-stream = "0.3.6"
thiserror = "2.0.12"
jsonschema = "0.18"
minijinja-contrib = { version = "2.9.0", features = ["pycompat"] }
aho-corasick = "1.1.3"
candle-core = "0.9.2-alpha.2"
candle-nn = "0.9.2-alpha.2"
candle-transformers = "0.9.2-alpha.2"
tokio = { version = "1", features = ["full"] }
pin-project-lite = "0.2"
hf-hub = { version = "0.4.3", features = ["tokio"] }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[dev-dependencies]
